--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-accessible-accordion": "^3.3.4",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.10",
     "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
